--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/file.mp3
+    - assets/File.mp3
 
   # To add assets to your application, add an assets section, like this:
   # assets:
