--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   just_audio: ^0.9.36
+  permission_handler: ^11.3.0
 
 dev_dependencies:
   flutter_test:
