--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  just_audio: ^0.9.36
   permission_handler: ^11.3.0
+  audioplayers: ^5.2.1
+  audioplayers_linux: ^3.1.0
 
 dev_dependencies:
   flutter_test:
