--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   permission_handler: ^11.3.0
+  just_audio_mpv: ^0.1.7
   audioplayers: ^5.2.1
   audioplayers_linux: ^3.1.0
 
