Get metadata for files

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   audioplayers: ^5.2.1
   audioplayers_linux: ^3.1.0
   path: ^1.9.0
+  flutter_media_metadata: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
