--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   audioplayers_linux: ^3.1.0
   path: ^1.9.0
   flutter_media_metadata: ^1.0.0+1
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
