--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path: ^1.9.0
   flutter_media_metadata: ^1.0.0+1
   provider: ^6.1.2
+  page_transition: ^2.1.0
 
 dev_dependencies:
   flutter_test:
