--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_media_metadata: ^1.0.0+1
   provider: ^6.1.2
   page_transition: ^2.1.0
+  audio_service: ^0.18.12
 
 dev_dependencies:
   flutter_test:
