--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,11 @@ dependencies:
   permission_handler: ^11.3.0
   just_audio_mpv: ^0.1.7
   audioplayers: ^5.2.1
-  audioplayers_linux: ^3.1.0
   path: ^1.9.0
-  flutter_media_metadata: ^1.0.0+1
   provider: ^6.1.2
   page_transition: ^2.1.0
   audio_service: ^0.18.12
+  metadata_god: ^0.5.2+1
 
 dev_dependencies:
   flutter_test:
