--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   audio_service: ^0.18.12
   metadata_god: ^0.5.2+1
   file_picker: ^8.0.0+1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
