Use just_audio for easy integration with just_audio_background

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,14 +36,13 @@ dependencies:
   cupertino_icons: ^1.0.6
   permission_handler: ^11.3.0
   just_audio_mpv: ^0.1.7
-  audioplayers: ^5.2.1
   path: ^1.9.0
   provider: ^6.1.2
   page_transition: ^2.1.0
-  audio_service: ^0.18.12
   metadata_god: ^0.5.2+1
   file_picker: ^8.0.0+1
   shared_preferences: ^2.2.2
+  just_audio: ^0.9.36
 
 dev_dependencies:
   flutter_test:
