--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   file_picker: ^8.0.0+1
   shared_preferences: ^2.2.2
   just_audio: ^0.9.36
+  just_audio_background: ^0.0.1-beta.11
 
 dev_dependencies:
   flutter_test:
