--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,19 @@
+buildscript {
+    ext.kotlin_version = '1.8.0'  // Adjust version as needed
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.2.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
+    }
+}
+
+plugins {
+    id "org.jetbrains.kotlin.android" version "1.8.0" apply false
+}
+
 allprojects {
     repositories {
         google()
