--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   metadata_god: ^0.5.2+1
   file_picker: ^8.0.0+1
   shared_preferences: ^2.2.2
+  workmanager: ^0.5.2
 
 dev_dependencies:
   flutter_test:
