--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences: ^2.2.2
   just_audio_background: ^0.0.1-beta.11
   just_audio: ^0.9.37
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
