--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   just_audio_background: ^0.0.1-beta.11
   just_audio: ^0.9.37
   uuid: ^3.0.7
+  system_theme: ^2.3.1
 
 dev_dependencies:
   flutter_test:
